samples/_failures_safe/1761622110_5eb513_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d17fb9d.c: In function ‘main’:
./samples/SAFE/__tmp_6d17fb9d.c:153:13: error: expected expression at end of input
  153 |             search_messages(entries, entry_count,
      |             ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6d17fb9d.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6d17fb9d.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6d17fb9d.c:153:13: error: expected declaration or statement at end of input
